--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
     <link rel="stylesheet" href="https://storage.googleapis.com/code.getmdl.io/1.0.0/material.indigo-pink.min.css">
     <script src="https://storage.googleapis.com/code.getmdl.io/1.0.0/material.min.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="/css/main.css">
-    <link rel="canonical" href="http://yourdomain.com/">
-    <link rel="alternate" type="application/rss+xml" title="Your awesome title" href="http://yourdomain.com/feed.xml" />
+    <link rel="stylesheet" href="http://devuiux.github.io/jekyll_mdl/css/main.css">
+    <link rel="canonical" href="http://devuiux.github.io/jekyll_mdl/">
+    <link rel="alternate" type="application/rss+xml" title="Your awesome title" href="http://devuiux.github.io/jekyll_mdl/feed.xml" />
 </head>
 
 <body>
@@ -170,4 +170,3 @@
 </body>
 
 </html>
-
