--- a/index.html
+++ b/index.html
@@ -161,6 +161,8 @@
         </main>
         <div class="mdl-layout__obfuscator"></div>
     </div>
+    <script src="http://devuiux.github.io/jekyll_mdl/js/jquery-2.1.4.min.js"></script>
+    <script src="http://devuiux.github.io/jekyll_mdl/js/functions.js"></script>
 </body>
 
 </html>
