--- a/_posts/2015-07-20-first-html-post.html
+++ b/_posts/2015-07-20-first-html-post.html
@@ -5,8 +5,8 @@ date:   2015-07-20 10:34:40
 categories: Products
 
 
-teaser: Enim labore aliqua consequat ut quis ad occaecat aliquip incididunt. Sunt nulla eu enim irure enim nostrud aliqua consectetur ad consectetur sunt ullamco officia. Ex officia laborum et consequat duis.
-
+teaser: Enim labore aliqua consequat ut quis ad occaecat aliquip incididunt. Sunt nulla eu enim irure enim nostrud <!-- aliqua consectetur ad consectetur sunt ullamco officia. Ex officia laborum et consequat duis.
+ -->
 
 image:
     thumb: road.jpg
